fixed form button on mobile. cleaned up printer layout. needs work + blank page bug

--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -707,7 +707,9 @@ body {
         left: 40%;
         padding: 40px 25px 0px;
         position: relative;
-        width: 750px;
+        // width: 750px;
+
+        max-width: 700px;
 
         .form-grid {
           display: grid;
@@ -816,10 +818,6 @@ body {
             }
           }
 
-          // .emailMessage {
-          //   grid-area: 3;
-          //   grid-column: 1 / 3;
-          // }
           .emailMessage {
             grid-area: 3;
             grid-column: 1 / 3;
@@ -870,7 +868,7 @@ body {
           text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.3),
             0px -1px 0px rgba(0, 0, 0, 0.7);
           text-transform: uppercase;
-          top: 60px;
+          top: 50px;
           transform: translate(-50%, -50%);
           transition: all 0.3s ease-in-out;
 
@@ -927,11 +925,9 @@ body {
     overflow: auto;
 
     .recipeTemplate {
-      // display: grid;
-      // grid: 1fr 1fr 4fr 4fr/ 1fr;
-      // row-gap: 10px;
       display: flex;
       flex-direction: column;
+      margin-top: 20px;
       height: 100%;
       width: 100%;
 
@@ -940,9 +936,8 @@ body {
         text-align: center;
         text-shadow: 0px 1px 3px hsl(36, 74%, 15%);
         font-size: 3rem;
-        grid-row: 1;
-        // padding-bottom: 10px;
-        // line-height: .8;
+        // grid-row: 1;
+        // margin-bottom: 5px;
 
       }
 
@@ -964,17 +959,17 @@ body {
       p {
         margin: 0 auto;
         text-align: justify;
-        grid-row: 2;
+        // grid-row: 2;
         padding: 10px 40px;
       }
 
-      .recipeIngredients {
-        grid-row: 3;
-      }
+      // .recipeIngredients {
+      // grid-row: 3;
+      // }
 
-      .recipeInstructions {
-        grid-row: 4;
-      }
+      // .recipeInstructions {
+      //   grid-row: 4;
+      // }
 
       .recipeIngredients,
       .recipeInstructions {
@@ -988,8 +983,6 @@ body {
       }
     }
   }
-
-  // height: 100%;
 }
 
 .activeOverlay,
@@ -1017,8 +1010,10 @@ body {
     z-index: 100;
     font-size: 2rem;
     position: inherit;
-    top: 1rem;
-    right: 1rem;
+    // top: 1rem;
+    // right: 1rem;
+    top: .5rem;
+    right: 1.5rem;
     width: 30px;
     height: 30px;
     background-image: url('../IMG/print.svg');
@@ -1077,39 +1072,82 @@ body {
   // -ms-filter: blur(10px);
 }
 
-//========================================================
-// RESPONSIVE MEDIA
+// #printSection {
+//   width: 100%;
+//   height: 100%;
+
+//   h1 {
+//     font-size: 3rem;
+//     text-align: center;
+//   }
+
+//   .aboutRecipe {
+//     display: none;
+//   }
+
+//   .recipeInfo {
+//     margin-bottom: 1em;
+//     text-align: center;
+//   }
+// }
+
+//!========================================================
+//! RESPONSIVE MEDIA
 
 //? Print for Recipes
 @media print {
   body * {
     visibility: hidden;
-    font: 16pt serif;
-    line-height: 1.5;
+    line-height: 1.4;
+    // margin: 0;
+    border: 1px solid black;
   }
 
+  // body {
+  //   width: 100%;
+  //   height: 100%;
+  // }
+
   @page {
-    margin: 5rem;
+    size: auto;
+    // margin: 0;
+    // width: 100%;
+    // height: 100%;
+    // margin: 0 5rem;
+    // position: relative;
+    // left: 0;
+    // top: 0;
   }
 
   h1 {
-    font-size: 5rem;
+    font-size: 3rem;
+    text-align: center;
   }
 
   h3 {
-    font-size: 3rem;
+    font-size: 2.5rem;
+  }
+
+  .aboutRecipe {
+    display: none;
+  }
+
+  .recipeInfo {
+    margin-bottom: 1em;
+    text-align: center;
   }
 
   #printSection,
   #printSection * {
     visibility: visible;
+    height: auto;
   }
 
-  #printSection {
-    position: fixed;
-    left: 0;
-    top: 0;
-  }
+  // #printSection {
+  //   position: sticky;
+  //   left: 0;
+  //   top: 0;
+  // }
 }
 
 //? Responsive Screen Size
@@ -1148,8 +1186,7 @@ body {
   .form-container {
     form {
       fieldset.mainFieldset {
-        left: 45% !important;
-        width: 50% !important;
+        width: 55% !important;
 
         .form-grid {
           grid-template-rows: 75px 75px 75px 250px !important;
@@ -1198,7 +1235,8 @@ body {
         p {
           width: 40rem !important;
 
-          // font-size: 1.5rem !important;
+          font-size: 1.5rem !important;
+
           &:nth-child(2) {
             top: 13rem !important;
           }
@@ -1275,8 +1313,8 @@ body {
 
     form {
       fieldset.mainFieldset {
-        left: 50% !important;
-        transform: translate(-50%, 0) !important;
+        left: 0 !important;
+        margin: 0 auto;
         width: 95% !important;
       }
     }
@@ -1305,12 +1343,6 @@ body {
   }
 
   .topRecipes-container {
-
-    // .topRecipes-title {
-    //   h1 {
-    //     font-size: 5rem !important;
-    //   }
-    // }
     .topRecipes-body {
       .recipeItems {
         padding: 0 !important;
@@ -1355,11 +1387,7 @@ body {
     }
 
     section.about-section {
-
-      // height: 27rem !important;
       div.boardContainer {
-
-        // height: 40rem !important;
         div.backboard {
           height: 25rem !important;
 
@@ -1386,9 +1414,6 @@ body {
     }
 
     .recipes-container {
-      // .recipes-title h1 {
-      //   // font-size: 4.8rem !important;
-      // }
 
       .recipes-body {
         grid-template-columns: repeat(1, 1fr) !important;
@@ -1411,10 +1436,6 @@ body {
           input::placeholder {
             font-size: 15px;
           }
-
-          // input[type="submit"] {
-          //   width: 155px !important;
-          // }
         }
       }
     }
